[Lokesh]Added:swagger UI for testing APIs forgot password and reset password
